# heyjack

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio.rs  library.rs  main.rs
src/components/: Library.tsx  MiniPlayer.tsx  Player.tsx  Playlists.tsx  Settings.tsx  Sidebar.tsx  TrackList.tsx
src/hooks/: useAudioPlayer.ts
src/store/: useStore.ts
src/types/: index.ts
src/utils/: format.ts
