[package]
name = "heyjack"
version = "1.0.0"
description = "A minimalist modern music player"
authors = ["HeyJack Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["dialog-open", "fs-read-file", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rodio = { version = "0.17", features = ["mp3", "vorbis", "flac", "wav"] }
walkdir = "2.4"
lofty = "0.18"
parking_lot = "0.12"
dirs = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
